pref: select-tree: adopt option item indent width

--- a/packages/select-tree/src/select-tree.scss
+++ b/packages/select-tree/src/select-tree.scss
@@ -2,8 +2,8 @@
 @import "~element-ui/packages/theme-chalk/src/common/var";
 
 .arrow {
-  width: 24px;
-  display: table-cell;
+  width: 18px;
+  display: flex;
   vertical-align: middle;
   text-align: center;
 }
