feat：select-tree add document

--- a/packages/select-tree/src/select-tree.scss
+++ b/packages/select-tree/src/select-tree.scss
@@ -15,6 +15,11 @@
 
   /* input */
 
+  .el-tag span {
+    width: 100%;
+    overflow: hidden;
+  }
+
   .el-input__inner {
     cursor: pointer;
 
